Wrote unit test for bp() mixin.

--- a/partials/breakpoints/_bp.scss
+++ b/partials/breakpoints/_bp.scss
@@ -2,7 +2,7 @@
 // @file
 // Breakpoint Mixin
 //
-
+@import "../../node_modules/breakpoint-sass/stylesheets/breakpoint";
 //
 // Create media queries based on the values in site $breakpoints map.
 // @param $breakpoint;
