Updated references to libraries.

--- a/test/bp.scss
+++ b/test/bp.scss
@@ -1,4 +1,5 @@
 @import "true";
+@import "../node_modules/breakpoint-sass/stylesheets/breakpoint";
 
 // Import the breakpoints utility and it's test.
 @import "../partials/breakpoints/bp";
