Created square mixin.

--- a/test/bp.scss
+++ b/test/bp.scss
@@ -2,7 +2,7 @@
 @import "../node_modules/breakpoint-sass/stylesheets/breakpoint";
 
 // Import the breakpoints utility and it's test.
-@import "../partials/breakpoints/bp";
+@import "../tools/breakpoints/bp";
 
 $mock: (
   none: 0,
