Created relative unit function.

--- a/test/bp.scss
+++ b/test/bp.scss
@@ -1,7 +1,7 @@
 @import "true";
 @import "../node_modules/breakpoint-sass/stylesheets/breakpoint";
 
-// Import the breakpoints utility and it's test.
+// Import the breakpoints utility.
 @import "../tools/breakpoints/bp";
 
 $mock: (
